# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  task_manager_actions.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: custom_mixins.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/label/: forms.py  tests.py  urls.py  views.py
task_manager/label/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py
task_manager/settings/: __init__.py  base.py  development.py  production.py
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py
task_manager/task/: filters.py  forms.py  models.py  service.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_body.py  (+1 more)
task_manager/task_manager/: settings.py
task_manager/templates/: index.html
task_manager/user/: admin.py  forms.py  models.py  test.py  views.py
templates/: 404.html  head.html  index.html  layout.html  login.html  navigation.html  new_user.html  update.html  users.html
templates/labels/: delete_label.html  labels.html  new_label.html  update_label.html
templates/statuses/: delete_status.html  new_status.html  statuses.html  update_status.html
templates/tasks/: delete_task.html  new_task.html  tasks.html  update_task.html  view_task.html
templates/users/: delete.html  delete_user.html  new_user.html  update_user.html  users.html
(+7 files in other folders)
